@@ -520,6 +520,12 @@ Release 2.6.0 - UNRELEASED
     HDFS-7172. Test data files may be checked out of git with incorrect line
     endings, causing test failures in TestHDFSCLI. (Chris Nauroth via wheat9)
 
+    HDFS-7176. The namenode usage message doesn't include "-rollingupgrade
+    started" (cmccabe)
+
+    HDFS-7178. Additional unit test for replica write with full disk.
+    (Arpit Agarwal)
+
     BREAKDOWN OF HDFS-6134 AND HADOOP-10150 SUBTASKS AND RELATED JIRAS
   
       HDFS-6387. HDFS CLI admin tool for creating & deleting an
